# SnipSlice

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  main.cpp
src/ui/: CMakeLists.txt  GreenButton.qml  ImageEditor.qml  Main.qml  SelectionArea.qml  Toolbar.qml  WelcomeScreen.qml
translations/: SnipSlice_en_US.ts  SnipSlice_zh_CN.ts
